style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/* general */
body {
  background: #000;
  font-family: 'Work Sans', sans-serif;
  padding: 0;
  margin: 0;
}

.container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
  grid-template-columns: 1fr;
  -ms-grid-rows: 1fr;
  grid-template-rows: 1fr;
}

.container > *:nth-child(1) {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
}

/* hero */

.hero-img {
  width: 100%;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  grid-column: 1/2;
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
}

.hero-img img{
  width: 100%;
}

.hero-container {
  display: -ms-grid;
  display: grid;
  place-items: center;
  -ms-flex-line-pack: center;
      align-content: center;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  grid-column: 1/2;
  -ms-grid-row: 1;
  -ms-grid-row-span: 1;
  grid-row: 1/2;
}

.hero-content {
  font-family: 'Roboto', sans-serif;
  font-size: 24px;
  text-align: center;
  color: #fbfcfc;
  letter-spacing: 2px;
}

/* btn */
.btn {
  color: #393d46;
  background: -webkit-gradient(linear, left top, left bottom, from(#bbbbbb), to(#e2e2e2));
  background: -o-linear-gradient(top, #bbbbbb, #e2e2e2);
  background: linear-gradient(to bottom, #bbbbbb, #e2e2e2);
  border: 1px solid #f7f7f6;
  letter-spacing: 2px;
  height: 60px;
  width:  200px;
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  -webkit-transition: all .2s;
  -o-transition: all .2s;
  transition: all .2s;
  position: relative;
  overflow: hidden;
  display: block;
  -webkit-transition: background-color 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
  transition: background-color 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
  -o-transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out;
  transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out;
  transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, transform 0.2s ease-out, -webkit-box-shadow 0.2s ease-out, -webkit-transform 0.2s ease-out;
}

.btn:before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  width: 0;
  padding-top: 0;
  border-radius: 100%;
  background-color: #e3e3e398;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

.btn:active:before {
  width: 120%;
  padding-top: 120%;
  -webkit-transition: width 0.2s ease-out, padding-top 0.2s ease-out;
  -o-transition: width 0.2s ease-out, padding-top 0.2s ease-out;
  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
}

.btn:hover {
  -webkit-box-shadow: 0 0 6px 2px rgb(255, 255, 255);
          box-shadow: 0 0 6px 2px rgb(255, 255, 255);
}

/* modal */
.modal {
  display: none; 
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

.modal-content {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  background-color: #fefefe;
  margin: 20px auto;
  border: 1px solid #888;
  width: 80%;
}

.modal-content iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* media queries */
@media screen and (max-width: 800px) {
  .modal-content {
    width: 100%;
  }
}

